<resources>
    <string name="app_name">Asaver</string>
    <string name="saved">Saved Items</string>
    <string name="paste_your_link_here">Paste your link here</string>
    <string name="download">Download</string>
    <string name="you_can_paste_the_link_directly_here">You can paste the link directly here…</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="snackvideo">SnackVideo</string>
    <string name="roposso">Roposso</string>
    <string name="share_chat">ShareChat</string>
    <string name="likee">Likee</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="gallery">Gallery</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share app</string>
    <string name="paste">Paste</string>
    <string name="download_anonymously">Download anonymously</string>
    <string name="share_app_message">Download Social media platform videos using this app. It\'s completely Ad free, Download Now.</string>
    <string name="share_text">File downloaded using Asaver app.\n It\'s completely free and ad free.\n Download now.</string>
    <string name="share_image_text">Share File via…</string>
    <string name="no_results">No Results</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="josh">Josh</string>
    <string name="mitron">Mitron</string>
    <string name="chingari">Chingari</string>
    <string name="mxtakatak">MxTakaTak</string>
    <string name="moj">Moj</string>
    <string name="zilli">Zilli</string>
    <string name="login">Login</string>
    <string name="no_story_found">No Story Found</string>
    <string name="app_not_supported">App not supported</string>
    <string name="automatic_download_is_stopped">Automatic download is stopped</string>
    <string name="enable">Enable</string>
    <string name="downloded">Downloads</string>
    <string name="back_button">Back button</string>
    <string name="rewind_button">Rewind button</string>
    <string name="play_button">play button</string>
    <string name="pause_button">pause button</string>
    <string name="fast_forward_button">fast forward button</string>
    <string name="settings">Settings</string>
    <string name="accept_permissions">Accept permissions</string>
    <string name="app_needs_read_storage_permission_to_show_downloaded_files">App needs read storage permission to show downloaded files</string>
    <string name="tiktok">TikTok</string>
    <string name="confirm_log_out_message_fb">Are you sure you want to log out from Facebook, you won\'t be able to view stories unless you login again.</string>
    <string name="confirm_log_out_message_insta">Are you sure you want to log out from Instagram, you won\'t be able to view stories unless you login again.</string>
    <string name="log_out">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="automatic_download">Automatic Download</string>
    <string name="just_click_copy_link_and_download_will_start_automatically">Just click copy link and download will start automatically</string>
    <string name="manual_download">Manual Download</string>
    <string name="click_share_to">Click share to</string>
    <string name="select_asaver_app">Select Asaver app</string>
    <string name="click_download">Click download</string>
    <string name="no_data_found">No data found</string>
</resources>