<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/iron" />

        <ImageView
            android:id="@+id/imageInfo"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/iron" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:padding="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageAppLogo"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_twitter"
                app:layout_constraintEnd_toEndOf="@id/textAppName"
                app:layout_constraintStart_toStartOf="@id/textAppName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/twitter"
                android:textColor="@color/iron"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageAppLogo" />

            <EditText
                android:id="@+id/inputLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/ubuntu_medium_italic"
                android:hint="@string/paste_your_link_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textAlignment="center"
                android:textColor="@color/blue_grey"
                android:textColorHint="@color/cadet_blue"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@+id/textAppName" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDownload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/download"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:backgroundTint="@color/blue_grey_500"
                app:cornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@id/buttonPasteLink"
                app:layout_constraintStart_toStartOf="@id/inputLink"
                app:layout_constraintTop_toBottomOf="@id/inputLink" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPasteLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/paste"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:backgroundTint="@color/blue_grey_500"
                app:cornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/inputLink"
                app:layout_constraintStart_toEndOf="@id/buttonDownload"
                app:layout_constraintTop_toBottomOf="@id/inputLink" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/inputLink"
                app:layout_constraintStart_toStartOf="@id/inputLink"
                app:layout_constraintTop_toBottomOf="@id/inputLink" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>